@startuml

title __ELPRESIDENTE's Class Diagram__\n

  namespace  {
    namespace ame {
      class game.Event {
      }
    }
  }
  

  namespace  {
    namespace ame {
      class game.EventChoice {
      }
    }
  }
  

  namespace  {
    namespace ame {
      class game.EventChoiceEffect {
      }
    }
  }
  

  namespace  {
    namespace ame {
      class game.Faction {
      }
    }
  }
  

  namespace  {
    namespace ame {
      class game.LoadJSON {
      }
    }
  }
  

  namespace  {
    namespace ame {
      class game.Main {
      }
    }
  }
  

  namespace  {
    namespace ame {
      class game.ScenarioSelector {
      }
    }
  }
  

  namespace  {
    namespace ame {
      class game.World {
      }
    }
  }
  

  namespace  {
    namespace ame {
      class game.WorldActions {
      }
    }
  }
  

  namespace  {
    namespace ame {
      class game.WorldData {
      }
    }
  }
  

  namespace  {
    namespace ame {
      class game.YearEnding {
      }
    }
  }
  

  game.EventChoiceEffect o-- game.WorldData : data
  game.LoadJSON o-- game.WorldData : data
  game.World o-- game.WorldActions : actions
  game.WorldActions o-- game.WorldData : data
  game.YearEnding o-- game.WorldData : data


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
